# division-model-loader

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake
include/ASSIMP/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  assimp.pc  build.ninja  cmake_install.cmake  cmake_uninstall.cmake  revision.h
include/ASSIMP/code/: cmake_install.cmake
include/ASSIMP/contrib/zlib/: CTestTestfile.cmake  cmake_install.cmake  zlib.pc
include/ASSIMP/samples/SimpleOpenGL/: CMakeCache.txt  cmake_install.cmake
include/ASSIMP/test/: cmake_install.cmake
include/ASSIMP/test/headercheck/: cmake_install.cmake
include/Model/: Animation.cpp  Animation.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/: main.cpp  model_loader.cpp  model_loader.h
